Tables in network page, renaming css files

--- a/networks.html
+++ b/networks.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="subscribers.css">
+    <link rel="stylesheet" href="networks.css">
     <title>Native</title>
 </head>
 
@@ -27,307 +28,137 @@
                 <a href="#"><img src="img/Shape.png">Support</a>
             </div>
         </div>
-        <!-- CENTER TOP HEADER AND BOXES -->
+        <!-- CENTER TOP HEADER -->
         <div class="ui-top-content">
-            <div class="ui-top-header">
-                <p class="ui-name-label">John Miller</p>
-                <p class="ui-main-label">Miller-40242</p>
-                <div class="ui-header-icons">
-                    <img class="header-icons-active" src="img/pin.png">
-                    <img src="img/slider.png">
-                    <img src="img/dots.png">
+            <div class="ui-top-content-search">
+                <div class="ui-top-header-search">
+                    <p class="ui-name-label">John Miller</p>
+                    <p class="ui-main-label">Miller-40242</p>
+                    <div class="ui-header-icons">
+                        <img class="header-icons-active" src="img/pin.png">
+                        <img src="img/slider.png">
+                        <img src="img/dots.png">
+                    </div>
+                </div>
+                <div class="ui-search-big">
+                    <img src="damjan" />
+                    <p>Search network...</p>
                 </div>
             </div>
-            <div class="ui-top-boxes">
-                <div class="ui-box ui-icon-box">
-                    <div class="ui-box-image-wrapper">
-                        <img class="ui-img-fix" src="img/user.png">
-                    </div>
-                    <div>
-                        <p>Subscriber</p>
-                        <p>John Miller</p>
-                        <img class="ui-arrow" src="damjan">
-                    </div>
-                </div>
-                <div class="ui-box ui-icon-box">
-                    <div class="ui-box-image-wrapper">
-                        <img src="img/Group.png">
-                    </div>
-                    <div>
-                        <p>Traffic</p>
-                        <p>4 services active</p>
-                        <img class="ui-arrow" src="damjan">
-                    </div>
-                </div>
-                <div class="ui-box ui-icon-box">
-                    <div class="ui-box-image-wrapper">
-                        <img src="img/Group 72.png">
-                    </div>
-                    <div>
-                        <p>Speedtest</p>
-                        <p>Last speedtest: Monday 01/02 @ 12:35 PM</p>
-                        <img class="ui-arrow" src="damjan">
-                    </div>
-                </div>
-            </div>
-            <!-- CENTER CONTENT BOXES -->
-            <div class="ui-center-content">
-                <div id="utilization" class="ui-box ui-progress-box">
-                    <div class="ui-utilization">
-                        <div>
-                            <p>JUNE UTILIZATION</p>
-                            <p>LIMIT: 35 GB</p>
-                        </div>
-                        <div class="ui-meter ui-progress-bar-big">
-                            <span><p>14.1 GB</p>  </span>
-                            <div></div>
-                        </div>
-                    </div>
-                    <div class="ui-speed">
-                        <div class="ui-flex">
-                            <img src="damjan">
-                            <p>21.4 Mb/s</p>
-                            <div class="ui-meter ui-gradient-green ui-progress-bar-small">
-                                <span class="ui-progress-number">
-                                    <p>1</p>
-                                    <p>5</p>
-                                    <p>20</p>
-                                    </span>
-                                <span class="ui-progress-background"></span>
-                            </div>
-                        </div>
-                        <div class="ui-flex">
-                            <img src="damjan">
-                            <p>21.4 Mb/s</p>
-                            <div class="ui-meter ui-gradient-green ui-progress-bar-small">
-                                <span class="ui-progress-number">
-                                    <p>1</p>
-                                    <p>5</p>
-                                    <p>20</p>
-                                    </span>
-                                <span class="ui-progress-background"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <div id="info-bars" class="ui-box ui-info-box">
-                    <div class="ui-bar-container">
-                        <p class="ui-bar-container-label">OVERALL INTERNET HEALTH</p>
-                        <div class="ui-smiley-bar">
-                            <img class="ui-smiley-image" src="img/smiley.png">
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ui-bar-container">
-                        <p class="ui-bar-container-label">SHORT TERM PACKET LOSS</p>
-                        <div class="ui-data-info">
-                            <p>2%</p>
-                            <p>0%</p>
-                        </div>
-                        <div class="ui-data-bar">
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ui-bar-container">
-                        <p class="ui-bar-container-label">LONG TERM PACKET LOSS</p>
-                        <div class="ui-data-info">
-                            <p>2%</p>
-                            <p>0%</p>
-                        </div>
-                        <div class="ui-data-bar">
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                            <div class="ui-bar-green">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ui-bar-container">
-                        <p class="ui-bar-container-label">LATENCY</p>
-                        <div class="ui-data-info">
-                            <p>80 ms</p>
-                            <p>20 ms</p>
-                        </div>
-                        <div class="ui-data-bar">
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange">
-                            </div>
-                            <div class="ui-bar-orange-empty">
-                            </div>
-                            <div class="ui-bar-orange-empty">
-                            </div>
-                            <div class="ui-bar-orange-empty">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ui-bar-container">
-                        <div class="ui-dot-container">
-                            <div class="ui-dot ui-dot-red">
-                            </div>
-                            <p>MTU</p>
-                        </div>
-                        <div class="ui-dot-container">
-                            <div class="ui-dot ui-dot-red">
-                            </div>
-                            <p>DNS 1</p>
-                        </div>
-                        <div class="ui-dot-container">
-                            <div class="ui-dot ui-dot-green">
-                            </div>
-                            <p>DNS 2</p>
-                        </div>
-                    </div>
-                </div>
 
-                <div id="bandwidth-usage" class="ui-box">
-                    <h1>Bandwidth usage<br> Graph</h1>
-                </div>
 
-                <div id="data-transfer" class="ui-box">
-                    <h1>Data transfer<br> Graph</h1>
-                </div>
 
-                <div id="health" class="ui-box">
-                    <h1>Health<br> Graph</h1>
-                </div>
+            <!--CENTER MAIN-->
+            <div class="table-div">
+                <table>
 
-                <div class="ui-column-break">
-                </div>
 
-                <div id="map" class="ui-box">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22658.491135757515!2d20.46694545!3d44.77445665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srs!4v1594291412484!5m2!1sen!2srs" width="100%" height="300" frameborder="0" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
-                </div>
+                    <tr class="ui-label-row">
+                        <td style="width: 269px">
+                            <p>Name</p>
+                        </td>
 
-                <div id="right-menu" class="vertical-menu-right ui-box">
-                    <a class="ui-green-item" href="#">
-                        <p>Status</p>
-                        <p>Active</p>
-                    </a>
-                    <a class="ui-blue-item" href="#">
-                        <p>Acnowledge</p>
-                        <p>Indefinitely</p>
-                    </a>
-                    <a href="#">
-                        <p>Public IP</p>
-                        <p>99.433.212.12</p>
-                    </a>
-                    <a href="#">
-                        <p>Serial & IP</p>
-                        <p>64FE345GD<br>172.231.121.1 </p>
-                    </a>
-                    <a href="#">
-                        <p>Last Self Reg</p>
-                        <p>39 minutes ago</p>
-                    </a>
-                    <a href="#">
-                        <p>RouterOS</p>
-                        <p>6.55.3</p>
-                    </a>
-                    <a href="#">
-                        <p>RouterCRM</p>
-                        <p>Miller-40222</p>
-                    </a>
-                    <a href="#">
-                        <p>ISP Plan</p>
-                        <p>Cloudhouse Fiberwave</p>
-                    </a>
-                </div>
+                        <td style="width: 107px">
+                            <p>Last 90 min.</p>
+                        </td>
 
-                <div id="support-info" class="vertical-menu-right ui-box">
-                    <a class="ui-blue-item" href="#">
-                        <p>Support Info</p>
-                        <p>Hide</p>
-                    </a>
-                    <p class="ui-support-info-text">Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum</p>
-                    <a href="#">
-                        <p class="ui-blue-text">Share...</p>
-                    </a>
-                </div>
+                        <td style="width: 184px">
+                            <p>Traffic (absolute)</p>
+                        </td>
+                        <td style="width: 110px">
+                            <p>Health</p>
+                        </td>
+                        <td style="width: 100px">
+                            <p>Device</p>
+                        </td>
 
+                        <td style="width: 100px">
+                            <p>Demo</p>
+                        </td>
+                    </tr>
+                </table>
+
+
+
+
+                <table>
+                    <th>PINNED NETWORKS</th>
+                    <tr class="ui-content-row">
+                        <td style="width: 240px">
+                            <div style="display:flex; align-items: center">
+                                <img style="background: green; width:24px;height:24px;border-radius: 50%;border: 1px solid #d0cdcd;margin-bottom: 5px;margin-right: 3px" src="img/pin.png" />
+                                <div>
+                                    <p style="margin:5px;font-weight: 600; font-size: 13px; color: #333">Armstrong</p>
+                                    <div style="display:flex; align-items:center;margin:5px;">
+                                        <div class="ui-active-field">
+                                            <p>ACTIVE</p>
+                                        </div>
+                                        <div class="ui-vip-clients-field">
+                                            <p>VIP CLIENTS</p>
+                                        </div>
+                                        <div class="ui-more-field">
+                                            <p>
+                                                5 MORE...
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+
+                        <td style="width: 110px">
+                            <h2>GRAPH</h2>
+                        </td>
+
+                        <td style="width: 180px">
+                            <h2>Progress bars</h2>
+                        </td>
+                        <td style="width: 110px">
+                            <div class="ui-smiley-bar">
+                                <img class="ui-smiley-image" src="img/smiley.png">
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                                <div class="ui-bar-green">
+                                </div>
+                            </div>
+                        </td>
+                        <td style="width: 100px">
+                            <p>Device</p>
+                        </td>
+
+                        <td style="width: 100px">
+                            <p>Demo</p>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
+
+
+
+
+
     </div>
 </body>
 
