--- a/subscribers.html
+++ b/subscribers.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="subscribers.css">
+    <link rel="stylesheet" href="networks.css">
     <title>Native</title>
 </head>
 
