--- a/pages/networks.html
+++ b/pages/networks.html
@@ -10,8 +10,12 @@
     <div class="ui-layout">
         <div class="ui-sidebar">
             <div class="ui-logo-box">
-                <img class="ui-logo-small" src="img/Group.png">
-                <p class="ui-logo-label">Smart Network</p>
+                <div class="ui-logo-wrapper">
+                    <img class="ui-logo-small" alt="Small logo" src="../img/Group.png">
+                </div>
+                <div class="ui-logo-label">
+                    <p>Smart Network</p>
+                </div>
             </div>
             <div class="ui-vertical-menu ui-menu-spacing">
                 <a href="subscribers.html"><img src="img/Shape-3.png">Subscribers</a>
@@ -49,24 +53,34 @@
                 </div>
             </div>
             <div class="table-div">
-                <div class="ui-network-labels">
-                    <div class="ui-network-labels-one">
-                        <p>Name</p>
-                    </div>
-                    <div class="ui-network-labels-two">
-                        <p>Last 90 min.</p>
-                    </div>
-                    <div class="ui-network-labels-three">
-                        <p>Traffic (absolute)</p>
-                    </div>
-                    <div class="ui-network-labels-four">
-                        <p>Health</p>
-                    </div>
-                    <div>
-                        <p>Device</p>
-                    </div>
-                </div>
                 <table>
+                    <tr class="ui-network-labels">
+                        <th>
+                            <div>
+                                <p>Name</p>
+                            </div>
+                        </th>
+                        <th>
+                            <div>
+                                <p>Last 90 min.</p>
+                            </div>
+                        </th>
+                        <th>
+                            <div>
+                                <p>Traffic (absolute)</p>
+                            </div>
+                        </th>
+                        <th>
+                            <div>
+                                <p>Health</p>
+                            </div>
+                        </th>
+                        <th>
+                            <div>
+                                <p>Device</p>
+                            </div>
+                        </th>
+                    </tr>
                     <tr>
                         <td>
                             <div class="ui-table-label">
@@ -77,8 +91,11 @@
                     <tr class="ui-content-row">
                         <td>
                             <div class="ui-network-status-container">
+                                <div class="ui-network-checkbox ui-display-checkbox ui-icon-checked">
+                                    <img src="../img/pin.png" alt="Check icon" class="ui-check-icon" />
+                                </div>
                                 <div class="ui-network-image-container">
-                                    <img class="ui-network-image" src="../img/pin.png" />
+                                    <img class="ui-network-image" src="../img/Group 72.png" />
                                 </div>
                                 <div>
                                     <div class="ui-network-label-container">
@@ -100,46 +117,68 @@
                                 </div>
                             </div>
                         </td>
-
                         <td>
-                            <h2>GRAPH</h2>
+                            <div class="ui-flex-center">
+                                <h2>GRAPH</h2>
+                            </div>
                         </td>
-
                         <td>
                             <div class="ui-traffic-speed">
                                 <div class="ui-speed-inner">
-                                    <div class="ui-flex">
-                                        <img src="img/arrow-dl.png" />
-                                        <p class=" ui-speed-label-green ">21.4 Mb/s</p>
+                                    <div class="ui-flex-center">
+                                        <div>
+                                            <img src="../img/arrow-dl.png" />
+                                        </div>
+                                        <div>
+                                            <p class=" ui-speed-label-green">21.4 Mb/s</p>
+                                        </div>
                                     </div>
-                                    <div class="ui-progress-gradient ui-gradient-green ui-progress-bar-small ">
-                                        <span class="ui-progress-number ">
-                                            <p>1</p>
-                                            <p>5</p>
-                                            <p>20</p>
-                                            </span>
-                                        <span class="ui-progress-background "></span>
+                                    <div class="ui-progress-gradient ui-gradient-green ui-progress-bar-small">
+                                        <div class="ui-progress-number">
+                                            <div>
+                                                <p>1</p>
+                                            </div>
+                                            <div>
+                                                <p>5</p>
+                                            </div>
+                                            <div>
+                                                <p>20</p>
+                                            </div>
+                                        </div>
+                                        <span class="ui-progress-background"></span>
                                     </div>
                                 </div>
                                 <div class="ui-speed-inner ">
-                                    <div class="ui-flex ">
-                                        <img src="img/arrow-up.png">
-                                        <p class="ui-speed-label-blue ">4.8 Mb/s</p>
+                                    <div class="ui-flex-center">
+                                        <div>
+                                            <img src="../img/arrow-up.png">
+                                        </div>
+                                        <div>
+                                            <p class="ui-speed-label-blue ">4.8 Mb/s</p>
+                                        </div>
                                     </div>
                                     <div class="ui-progress-gradient ui-gradient-blue ui-progress-bar-small ">
-                                        <span class="ui-progress-number ">
-                                            <p>1</p>
-                                            <p>5</p>
-                                            <p>20</p>
-                                            </span>
-                                        <span class="ui-progress-background "></span>
+                                        <div class="ui-progress-number">
+                                            <div>
+                                                <p>1</p>
+                                            </div>
+                                            <div>
+                                                <p>5</p>
+                                            </div>
+                                            <div>
+                                                <p>20</p>
+                                            </div>
+                                        </div>
+                                        <div class="ui-progress-background"></div>
                                     </div>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="ui-smiley-bar">
-                                <img class="ui-smiley-image" src="../img/smiley.png">
+                                <div>
+                                    <img class="ui-smiley-image" src="../img/smiley.png" alt="Smiley image" />
+                                </div>
                                 <div class="ui-bar-green">
                                 </div>
                                 <div class="ui-bar-green">
@@ -167,7 +206,9 @@
                             </div>
                         </td>
                         <td>
-                            <p>Device</p>
+                            <div>
+                                <p>Device</p>
+                            </div>
                         </td>
                     </tr>
                 </table>
